# yast2-udba

./: MAINTAINER  Makefile.am  RPMNAME  TODO  _cvsignore  yast2-udba.spec.in
agents/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am  _cvsignore
notused/: Udba2.pm  Udba3.py  package_list
package/: _cvsignore  yast2-udba.changes  yast2-udba.spec
scripts/: Makefile.am  aria2c  downloader.sh  udba  udba-builder  udba-fetcher
src/: Makefile.am  Udba.ycp  _cvsignore  complex.ycp  dialogs.ycp  helps.ycp  udba-builder  udba.ycp  udba_auto.ycp  udba_proposal.ycp  wizards.ycp
src/clients/: udba.rb  udba_auto.rb  udba_proposal.rb
src/desktop/: udba.desktop
src/include/udba/: complex.rb  dialogs.rb  helps.rb  wizards.rb
src/modules/: Udba.rb
testsuite/: Makefile.am
testsuite/tests/: .gitignore  Udba.out  Udba.rb  Udba.ycp
